...
            android:layout_height="wrap_content"
            android:id="@+id/spnCountryCode"
            android:backgroundTint="@color/colorTextLight"
            android:textAppearance="?android:textAppearanceLarge" />

        <EditText
            android:id="@+id/edtPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:inputType="number"
            android:maxLength="8"
            android:textColor="@color/colorTextLight"
...
            android:textAppearance="?android:textAppearanceLarge" />
    </LinearLayout>

    <Button
        android:layout_width="100dp"
        android:layout_height="48dp"
        android:id="@+id/btnSendSMS"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="Send SMS"
        android:background="@drawable/btn_border"
        android:elevation="0dp"
        android:enabled="false"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>

