<resources>
    <string name="app_name">KodYaC</string>

    <string name="welcome_string">Welcome to %1$s\'s  KYC process!</string>
    <string name="thankyou_string">Thank you for verifying your identity!</string>
    <string name="microblink_license_key">NL4PGOHO-4OZM2ETL-CCRNEV72-B3QHWVKH-KAANXESD-5XF3PKUW-MQDZWC7I-LI662D3C</string>
    <string name="emas_scan_first_side">Please scan the front of your NRIC</string>
    <string name="emas_scan_second_side">Please scan the back of your NRIC</string>
    <string name="permission_camera_rationale">Access to the camera is needed for detection</string>
    <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
    <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
    <string name="ok">OK</string>
    <integer name="REQUEST_CODE">1024</integer>
    <string-array name="country_codes">
        <item>+65</item>
    </string-array>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"https://www.kodyac.tech\",\n  }\n}]</string>
</resources>
