<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorIBMBlue"
    tools:context="com.ashiswin.kodyac.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:layout_margin="16dp"
            android:id="@+id/imgLogo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:textAppearanceLarge"
            android:gravity="center_horizontal"
            android:id="@+id/txtWelcome"
            android:textColor="@color/colorTextLight"
            android:textAllCaps="true"
            android:layout_marginBottom="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textStyle="bold"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:id="@+id/btnBegin"
            android:text="BEGIN"
            android:elevation="0dp"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_margin="16dp"/>
    </LinearLayout>
</RelativeLayout>
